--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,11 @@ jobs:
           MY_SECRET: ${{ secrets.DOCKER_TEST_PORT }}
         run: |
           echo "Secret length: ${#MY_SECRET}"
+      - name: Print secret (temporarily)
+        env:
+          MY_SECRET: ${{ secrets.DOCKER_TEST_PORT }}
+        run: |
+          echo "Secret: ${MY_SECRET}"
       - run: echo "$SUPER_SECRET"
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
