--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,29 +2,38 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Preparation:
     runs-on: self-hosted
     steps:
-      - name: Print secret (temporarily)
-        env:
-          MY_SECRET: ${{ secrets.DOCKER_TEST_PORT }}
-        run: |
-          echo "Secret length: ${#MY_SECRET}"
-      - name: Print secret (temporarily)
-        env:
-          MY_SECRET: ${{ secrets.DOCKER_TEST_PORT }}
-        run: |
-          echo "Secret: ${MY_SECRET}"
-      - run: echo "$SUPER_SECRET"
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+      - name: Install Python
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10.5'
+
+      - name: Install reqirements.txt
+      - run: pip install -r requirements.txt
+
+      - name: Docker compose Postgres for testing
+      - run: docker compose -f docker-compose.test.yml up
+
+      - name: run 
+      - run: echo "POSTGRES_USER=${{secrets.POSTGRES_USER}}" > .env
+      - run: echo "POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}" >> .env
+      - run: echo "POSTGRES_DB=${{secrets.POSTGRES_DB}}" >> .env
+      - run: echo "OUTER_PORT=${{secrets.OUTER_PORT}}" >> .env
+      
+  Testing:
+    runs-on: self-hosted
+    needs: Preparation
+    steps:
+      - name: Run Tests
+      - run: pytest .\tests.py
+
+      - name: Destroy test-db container
+      - run: docker compose -f docker-compose.test.yml down
+    
+
       
