--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,18 +9,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Python
-      - uses: actions/setup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10.5'
 
       - name: Install reqirements.txt
-      - run: pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Docker compose Postgres for testing
-      - run: docker compose -f docker-compose.test.yml up
+        run: docker compose -f docker-compose.test.yml up
 
       - name: run 
-      - run: |
+        run: |
           echo "POSTGRES_USER=${{secrets.POSTGRES_USER}}" > .env
           echo "POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}" >> .env
           echo "POSTGRES_DB=${{secrets.POSTGRES_DB}}" >> .env
