--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,7 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+
 jobs:
   Preparation:
     runs-on: self-hosted
@@ -13,18 +14,25 @@ jobs:
         with:
           python-version: '3.10.5'
 
-      - name: Install reqirements.txt
+      - name: Install requirements.txt
         run: pip install -r requirements.txt
 
-      - name: Docker compose Postgres for testing
-        run: docker compose -f docker-compose.test.yml up
-
-      - name: run 
+      - name: Create .env file
         run: |
-          echo "POSTGRES_USER=${{secrets.POSTGRES_USER}}" > .env
-          echo "POSTGRES_PASSWORD=${{secrets.POSTGRES_PASSWORD}}" >> .env
-          echo "POSTGRES_DB=${{secrets.POSTGRES_DB}}" >> .env
-          echo "OUTER_PORT=${{secrets.OUTER_PORT}}" >> .env
-    
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+          echo "OUTER_PORT=${{ secrets.OUTER_PORT }}" >> .env
 
-      
+      - name: Docker compose Postgres for testing
+        run: docker-compose -f docker-compose.test.yml up -d
+
+  Testing:
+    runs-on: self-hosted
+    needs: Preparation
+    steps:
+      - name: Run Tests
+        run: pytest tests.py
+
+      - name: Destroy test-db container
+        run: docker-compose -f docker-compose.test.yml down
