--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,8 +31,8 @@ jobs:
     runs-on: self-hosted
     needs: Preparation
     steps:
-      - name: which
-        run: which pytest
+      - name: pwd
+        run: pwd
         
       - name: Run Tests
         run: pytest tests.py
