--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,7 +32,7 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Run Tests
-        run: python -m pytest tests.py
+        run: pytest tests.py
 
       - name: Destroy test-db container
         run: docker compose -f docker-compose.test.yml down
