--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,10 +11,11 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_TEST_USER }}" > .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_TEST_PASSWORD }}" >> .env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_TEST_DB }}" >> .env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
           echo "OUTER_PORT=${{ secrets.POSTGRES_TEST_OUTER_PORT }}" >> .env
+          echo "INTERNAL_PORT=${{ secrets.POSTGRES_INTERNAL_PORT }}" >> .env
 
       - name: Docker compose Postgres for testing
         run: docker compose -f docker-compose.test.yml up -d
@@ -36,3 +37,22 @@ jobs:
 
       - name: Destroy test-db container
         run: docker compose -f docker-compose.test.yml down
+
+      - name: Clean .env
+        run: rm ./.env
+
+  BuildAndRun:
+    runs-on: self-hosted
+    needs: Testing
+    steps:
+      - name: Create .env file
+        run: |
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
+          echo "OUTER_PORT=${{ secrets.POSTGRES_OUTER_PORT }}" >> .env
+          echo "INTERNAL_PORT=${{ secrets.POSTGRES_INTERNAL_PORT }}" >> .env
+      - name: Down active app
+        run: docker compose -f .\docker-compose.app.yml down
+      - name: Compose whole app
+        run: docker compose -f .\docker-compose.app.yml up
