--- a/.env_template
+++ b/.env_template
@@ -2,3 +2,5 @@ POSTGRES_USER=your_text
 POSTGRES_PASSWORD=your_text
 POSTGRES_DB=your_text
 OUTER_PORT=your_text
+INTERNAL_PORT=your_text
+TG_TOKEN=TOKEN
