--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,16 +36,10 @@ jobs:
         run: pytest tests.py
 
       - name: Destroy test-db container
-        run: docker compose -f docker-compose.test.yml down --remove-orphans
+        run: docker compose -f docker-compose.test.yml down
 
       - name: Clean .env
         run: rm ./.env
-
-      - name: Cleanup docker resources
-        run: |
-          docker network prune -f   # Только неиспользуемые сети
-          docker volume prune -f    # Только неиспользуемые volumes
-          docker image prune -f     # Только неиспользуемые образы (без контейнеров)
 
   BuildAndRun:
     runs-on: self-hosted
