--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -12,7 +12,7 @@ services:
       interval: 5s
       retries: 5
     volumes:
-      - /var/lib/docker/volumes/birthdate_bot_habrdb-data:/var/lib/postgresql/data
+      - habrdb-data:/var/lib/postgresql/data
   bot:
     build:
       context: .
