--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -12,7 +12,7 @@ services:
       interval: 5s
       retries: 5
     volumes:
-      - habrdb-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
   bot:
     build:
       context: .
@@ -26,4 +26,5 @@ services:
         condition: service_healthy
 
 volumes:
-  habrdb-data:
+  db-data:
+    external: true
