--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,7 +16,10 @@ jobs:
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
           echo "OUTER_PORT=${{ secrets.POSTGRES_TEST_OUTER_PORT }}" >> .env
           echo "INTERNAL_PORT=${{ secrets.POSTGRES_INTERNAL_PORT }}" >> .env
-
+          
+      - name: Docker compose down
+        run: docker compose -f docker-compose.test.yml up -d
+      
       - name: Docker compose Postgres for testing
         run: docker compose -f docker-compose.test.yml up -d
 
