--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -13,6 +13,7 @@ services:
       retries: 5
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./backup_1.sql:/docker-entrypoint-initdb.d/backup_1.sql
   bot:
     build:
       context: .
