--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -25,6 +25,17 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+  notifications:
+    build:
+      context: .
+      dockerfile: notifications.Dockerfile
+    container_name: notifications-container
+    restart: always
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 volumes:
   db-data:
