--- a/tests/docker-compose.test.yml
+++ b/tests/docker-compose.test.yml
@@ -12,4 +12,4 @@ services:
       interval: 5s
       retries: 5
     volumes:
-      - ./backup_1.sql:/docker-entrypoint-initdb.d/backup_1.sql
+      - ./db/backup_1.sql:/docker-entrypoint-initdb.d/backup_1.sql
