--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,7 @@ jobs:
 
       - name: Create .env file
         run: |
+          echo "POSTGRES_DB_SERVICE_NAME=postgres" > .env
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
@@ -36,7 +37,7 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Run Tests
-        run: pytest tests.py
+        run: pytest ./tests/tests.py
 
       - name: Destroy test-db container
         run: docker compose -f docker-compose.test.yml down
@@ -50,6 +51,7 @@ jobs:
     steps:
       - name: Create .env file
         run: |
+          echo "POSTGRES_DB_SERVICE_NAME=postgres" > .env
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
