--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,18 +11,19 @@ jobs:
 
       - name: Create .env file
         run: |
+          cd tests
           echo "POSTGRES_DB_SERVICE_NAME=postgres" > .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
           echo "OUTER_PORT=${{ secrets.POSTGRES_TEST_OUTER_PORT }}" >> .env
           echo "INTERNAL_PORT=${{ secrets.POSTGRES_INTERNAL_PORT }}" >> .env
           
       - name: Docker compose down
-        run: docker compose -f docker-compose.test.yml down
+        run: docker compose -f ./tests/docker-compose.test.yml down
       
       - name: Docker compose Postgres for testing
-        run: docker compose -f docker-compose.test.yml up -d
+        run: docker compose -f ./tests/docker-compose.test.yml up -d
 
   Testing:
     runs-on: self-hosted
@@ -52,7 +53,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "POSTGRES_DB_SERVICE_NAME=postgres" > .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB_NAME }}" >> .env
           echo "OUTER_PORT=${{ secrets.POSTGRES_OUTER_PORT }}" >> .env
