--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,7 @@
-POSTGRES_USER=your_text
-POSTGRES_PASSWORD=your_text
-POSTGRES_DB=your_text
-OUTER_PORT=your_text
-INTERNAL_PORT=your_text
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=birth_db
+POSTGRES_DB_SERVICE_NAME=birth-postgres
+OUTER_PORT=5433
+INTERNAL_PORT=5432
 TG_TOKEN=TOKEN
